<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/phieuThongTin"
        android:textSize="30dp"
        android:gravity="center"
        android:id="@+id/textView1"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/hoTen"
        android:textSize="30dp"
        android:gravity="center"
        android:id="@+id/editText1"
        android:layout_below="@id/textView1"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/gmail"
        android:textSize="30dp"
        android:gravity="center"
        android:id="@+id/editText2"
        android:layout_below="@id/editText1"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/soDienThoai"
        android:textSize="30dp"
        android:gravity="center"
        android:id="@+id/editText3"
        android:layout_below="@id/editText2"
        android:layout_marginTop="20dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/input"
        android:textSize="30dp"
        android:gravity="center"
        android:id="@+id/butTon1"
        android:layout_below="@id/editText3"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="INPUT"
        android:textSize="30dp"
        android:gravity="center"
        android:id="@+id/textView2"
        android:layout_below="@id/butTon1"
        android:layout_marginTop="20dp"
        />
</RelativeLayout>